5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1593_1802.log
== TEST (2019-03-24 16:33:31) 
-- CODE:
pi=int(input("pontoa de vida inicial: "))
pi= x<=20
print (pi)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pi= x<=20
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:38:07) 
-- CODE:
pi=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:38:45) 
-- CODE:
pi=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(dano - pi)
-- OUTPUT:
8.858407346410207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:39:29) 
-- CODE:
pi=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(pi-dano)
-- OUTPUT:
-8.858407346410207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:40:07) 
-- CODE:
pi=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(pi-dano)
-- OUTPUT:
-8.858407346410207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:41:57) 
-- CODE:
p=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(p-dano)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:42:12) 
-- CODE:
p=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(p-dano)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:42:20) 
-- CODE:
p=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(p-dano)
-- EXECUTION TIME:
0.170429
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:25:21) 
-- CODE:
p=int(input("pontoa de vida inicial: "))
d1=int(input("numero sortiado 1: "))
d2=int(input("numero sortiado 2: "))
from math import*
dano=int(sqrt(5*d1)+(pi**(d2/3)))
print(p-dano)
-- EXECUTION TIME:
0.16297
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
